style updates. fixed dates on shoots

--- a/src/styles/sass/navigation.scss
+++ b/src/styles/sass/navigation.scss
@@ -1,19 +1,4 @@
-$brand-primary: rgba(109, 162, 150, 0.59);
-$brand-secondary: rgba(235, 160, 15, 0.85);
-
-$nav-bar-height: 3.8rem;
-
-html {
-  font-size: 10px;
-  font-family: sans-serif;
-  font-variant: small-caps;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  -webkit-text-size-adjust: 100%;
-}
+@import 'variables';
 
 nav {
   padding-top: 5px;
@@ -24,10 +9,6 @@ nav {
   width: 100%;
   z-index: 1;
   border-bottom: .1rem solid #d1d1d1;
-}
-
-.login-create-account.container {
-  margin-top: 80px;
 }
 
 .navigation .container {
@@ -66,30 +47,3 @@ nav {
     display: inline;
   }
 }
-
-.centered {
-  text-align: center;
-}
-
-.validation-error {
-  color: red;
-  margin-top: 3px;
-  margin-left: 3px;
-}
-
-.form-field {
-  margin-bottom: 10px;
-}
-
-.server-error-message {
-  background-color: #FF5722;
-  padding: 10px;
-  margin:10px;
-  border-radius: 8px;
-
-  font-variant: normal;
-  font-size: 14pt;
-  font-family: serif;
-  font-weight: bold;
-}
-
