--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,6 +32,9 @@ body {
   font-family: serif;
   font-weight: bold; }
 
+input[type=submit] {
+  -webkit-appearance: none; }
+
 input[type=date] {
   display: block;
   border-radius: 5px;
@@ -40,6 +43,7 @@ input[type=date] {
   box-shadow: none;
   width: 100%;
   height: 3.8rem;
+  line-height: 3.8rem;
   border-top-color: #d1d1d1;
   border-top-style: solid;
   border-top-width: 0.1rem;
