--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,4 @@
 html {
-  font-size: 10px;
   font-family: sans-serif;
   font-variant: small-caps; }
 
@@ -32,11 +31,24 @@ body {
   font-family: serif;
   font-weight: bold; }
 
+input {
+  font-size: 13pt; }
+  input:focus {
+    font-size: 16pt; }
+
+input[type=date],
 input[type=submit] {
   -webkit-appearance: none; }
 
+input[type=checkbox] {
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  display: inline-block;
+  margin-bottom: 0.2em;
+  margin-left: 0.5em; }
+
 input[type=date] {
-  display: block;
   border-radius: 5px;
   font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   padding: 0.6rem 1.0rem;
