--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,14 +22,15 @@ body {
   margin-bottom: 10px; }
 
 .server-error-message {
-  background-color: #FF5722;
-  padding: 10px;
-  margin: 10px;
-  border-radius: 8px;
+  background-color: #484954;
+  padding: 5px 10px;
+  margin: 10px 10px;
+  border-radius: 3px;
+  color: white;
+  text-align: center;
   font-variant: normal;
-  font-size: 14pt;
-  font-family: serif;
-  font-weight: bold; }
+  font-size: 12pt;
+  font-weight: medium; }
 
 input {
   font-size: 13pt; }
